--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 		<script src="js/base64.js" type="text/javascript"></script>
 		<script src="js/canvas2image.js" type="text/javascript"></script>
 		<script src="js/scraping/magnets.js" type="text/javascript"></script>
+		<script src='https://rawgit.com/padolsey/jquery.fn/master/cross-domain-ajax/jquery.xdomainajax.js'></script>
 		
 		<!-- Mobile Specific Metas -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
