Further dev in JS

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
 
 		            <label>Select site</label>
 		            <select id ="site">
-		               <option value = "http://lyrics.wikia.com/">LyricWikia</option>
+		               <option value = "http://lyrics.wikia.com">LyricWikia</option>
 		            </select>
 
 		            <input id="max" 
